# ada-2024-project-robodatapioneers2024

./: .gitignore  NBA_analysis.ipynb  P3_part1.ipynb  README.md  analyze_rio_2016_meme.ipynb  analyze_user_embeddings.ipynb  analyze_winder_olympics.ipynb  analyze_winter_olympics.ipynb  basic_analysis.ipynb  eurocup.ipynb  exploration_datasets.ipynb  helpers.py  ideas_for_analysis.md  init_analysis.ipynb  initial_analysis.ipynb  main.ipynb  metadata.ipynb  news_category_filtering.ipynb  part3.ipynb  part3_diffindiff.ipynb  part3_fft.ipynb  part3_sport_transit.ipynb  part3new.ipynb  pip_requirements.txt  pyproject.toml  sentiment_analysis.ipynb  sentiment_analysis.py  sport_category_filtering.ipynb  sport_types_filtering.ipynb  sport_types_filtering.py  sports.ipynb  tag_count.txt  tags_and_title_filtering.ipynb  test.ipynb  timeseries_info.ipynb  yt_scraper.ipynb
src/data/: parquet_file_creation.ipynb
src/models/: sentiment_analysis.py
src/scripts/: get_sentiment.py  json_to_parquet.py  sport_videos.py
src/utils/: data_utils.py  evaluation_utils.py  general_utils.py  sentiment_utils.py  tag_utils.py  theme_utils.py  title_utils.py
website_data/: lda_nba.html  lda_olympics.html  lda_world_cup_football.html  sport_transit.csv
