[project]
name = "ada-2024-project-robodatapioneers2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.5.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "wordcloud>=1.9.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
